auto overflow for help bar, fixes #504
Closes #504

Merge request studip/studip!2192

--- a/resources/assets/stylesheets/less/helpbar.less
+++ b/resources/assets/stylesheets/less/helpbar.less
@@ -58,6 +58,9 @@
     width: @helpbar-width;
     z-index: 1000;
 
+    overflow: auto;
+    max-height: calc(100vh - 200px);
+
     &::before {
         border-bottom: 2px solid @base-color-80;
         border-left: @border-width solid transparent;
